Fixed phone layout issue

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,6 @@ body{
 
 .intro-text{
   max-width: 1600px;
-  min-width: 700px;
   margin: 0 auto;
   line-height: 1.6;
   font-size: 1.1rem;
